# foxo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/routers/: alerts.py  movements.py  products.py
app/services/: movement_service.py  product_service.py
scripts/: schema.sql  seed.py
tests/: conftest.py  test_concurrency.py  test_immutability.py  test_movements.py  test_pagination_and_alerts.py  test_products.py
