[project]
name = "foxo-inventory-service"
version = "1.0.0"
description = "Backend service that tracks stock levels and a log of every stock movement."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "SQLAlchemy>=2.0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
